Fix Environment::GetVar() result converting to UTF16.

Environment::GetVar() returns UTF8, but the code in GetLaunchShortcutKind() thinks that there must be ASCII.

R=pkasting@chromium.org
BUG=602540

Review URL: https://codereview.chromium.org/1877223002

Cr-Commit-Position: refs/heads/master@{#386919}

Former-commit-id: 41fc1171445d71c5d1d8352f3f0a021238da3638