chrome/browser/ui/startup/startup_browser_creator_impl.cc
@@ -161,7 +161,7 @@ LaunchMode GetLaunchShortcutKind() {
     std::string appdata_path;
     env->GetVar("USERPROFILE", &appdata_path);
     if (!appdata_path.empty() &&
-        shortcut.find(base::ASCIIToUTF16(appdata_path)) != base::string16::npos)
+        shortcut.find(base::UTF8ToUTF16(appdata_path)) != base::string16::npos)
       return LM_SHORTCUT_DESKTOP;
     return LM_SHORTCUT_UNKNOWN;
   }
